# s2geometry

./: CMakeLists.txt  README.md
src/gflags/: gflags.h
src/glog/: logging.h
src/s2/: id_set_lexicon.cc  id_set_lexicon.h  mutable_s2shape_index.cc  mutable_s2shape_index.h  mutable_s2shape_index_test.cc  r1interval.h  r2rect.h  s1angle_test.cc  s1interval.cc  s1interval.h  s2builder.cc  s2builder_graph.cc  s2builder_test.cc  s2builderutil_s2polyline_vector_layer.h  s2builderutil_snap_functions.cc  s2builderutil_snap_functions_test.cc  s2cap.cc  s2cap.h  s2cell.cc  s2cell_id.cc  s2cell_id.h  s2cell_id_test.cc  s2cell_test.cc  s2cell_union.cc  s2cell_union.h  s2cell_union_test.cc  s2closest_edge_query_base.h  s2closest_edge_query_test.cc  s2closest_point_query_base.h  s2coords.h  s2crossing_edge_query.cc  s2crossing_edge_query_test.cc  s2debug.cc  s2edge_clipping.cc  s2edge_clipping.h  s2edge_crosser.cc  s2edge_crosser.h  s2edge_crossings.cc  s2edge_crossings_test.cc  s2edge_distances.cc  (+27 more)
src/s2/base/: casts.h  port.h
src/s2/util/bits/: bits.h
src/s2/util/coding/: coder.cc  coder.h  nth-derivative.h
src/s2/util/endian/: endian.h
src/s2/util/gtl/: btree.h  compact_array.h
src/s2/util/math/: matrix3x3.h  vector.h
src/s2/util/math/exactfloat/: exactfloat.cc  exactfloat.h
